# Foresight

./: .gitignore  README.md  main.py  pyproject.toml  system_overview.md
app/: api.py  database.py  llm.py  persistence.py  pipeline.py  pipeline_state.py
dashboard/client/: package-lock.json  package.json  tailwind.config.cjs
dashboard/client/src/: App.css  App.jsx  index.css
dashboard/client/src/components/: FleetMap.jsx  LiveFeed.jsx  RunButton.jsx  RunMetrics.jsx  StatCard.jsx  VehicleDrawer.jsx
dashboard/client/src/components/ui/: analytics-dashboard.jsx  charts.jsx  laser-flow.jsx  sidebar.jsx  stat-card.jsx  topbar.jsx  vehicles-table.jsx
dashboard/client/src/hooks/: useApi.js
dashboard/client/src/pages/: AgentControlPage.jsx  AlertsPage.jsx  Dashboard.jsx  FleetPage.jsx  Insights.jsx  LandingPage.jsx  ManufacturingPage.jsx  Report.jsx  SettingsPage.jsx
dashboard/client/src/services/: apiClient.js
graph/: __init__.py  edges.py  nodes.py  state.py
tools/: history.py  iternio.py  service_center.py  telematics.py
