[project]
name = "automotive_predictive_maintenance_ai_system"
version = "0.1.0"
description = "automotive_predictive_maintenance_ai_system using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.0,<1.0.0"
]

[project.scripts]
automotive_predictive_maintenance_ai_system = "automotive_predictive_maintenance_ai_system.main:run"
run_crew = "automotive_predictive_maintenance_ai_system.main:run"
train = "automotive_predictive_maintenance_ai_system.main:train"
replay = "automotive_predictive_maintenance_ai_system.main:replay"
test = "automotive_predictive_maintenance_ai_system.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
